# codex-control-plane

./: .gitignore  README.md  pyproject.toml
app/: config.py  deps.py  main.py
connectors/: __init__.py  base.py  errors.py  factory.py  gmail.py  gmail_live.py
db/: __init__.py  governance_seed.py  models.py  session.py
docker/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
docs/: AUDIT_INTEGRITY.md  BUYER_AUDIT_PACKET_DEMO.md  CONNECTOR_STANDARD.md  CONTROL_MAPPING.md  DEMO_WALKTHROUGH.md  ENTERPRISE_GOVERNANCE_FOUNDATION.md  ENTERPRISE_GOVERNANCE_PR1_SCHEMA.md  EVIDENCE_GRAPH.md  EVIDENCE_PACKET_EXPORT.md  GMAIL_OPERATOR_RUNBOOK.md  KNOWN_LIMITATIONS.md  LIVE_GMAIL_SETUP.md  OPERATOR_ACCEPTANCE_CHECKLIST.md  PHASE2_DEMO_SCRIPT.md  PHASE2_GRANT_USE_CASE.md  PHASE2_PILOT_CHECKLIST.md  PHASE2_RUNBOOK.md  PHASE_1_COMPLETION_SUMMARY.md  RBAC.md  RELEASE_NOTES_GMAIL_V1.md  STRUCTURE.md  TENANT_ISOLATION.md  TRUST_INFRASTRUCTURE_GAP_ANALYSIS.md  WHAT_THIS_SYSTEM_IS.md
infra/: az-create.sh  env.example
media/: __init__.py
scripts/: demo_evidence_packet.py  demo_gmail_control_plane.ps1  demo_gmail_flow.sh  seed_pilot.py  show_run_summary.ps1
services/: __init__.py  approval_service.py  audit_service.py  chat_orchestrate.py  control_catalog.py  email_persistence.py  email_service.py  evidence_graph.py  evidence_packet.py  evidence_signature_service.py  evidence_store.py  governance_workflow.py  incident_replay.py  job_service.py  job_types.py  override_service.py  policy_service.py  policy_version_service.py  rbac_service.py  risk_service.py  (+3 more)
(+76 files in other folders)
